2012-01-05 22:20-EST Doug Simons <doug.simons@testplant.com>

	* Source/NSXMLDocument.m: Modify XMLStringWithOptions: to only include
	the header when version, encoding, or standalone has been set.

2012-01-05 22:20-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSXMLElement.m: in setChildren: set the childCount.

2012-01-05 22:07-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSXMLElement.m: Correct warning in copyWithZone: added
	return.  Correct issue with childCount being out of sync.

2012-01-05 21:33-EST Gregory John Casamento <greg.casamento@gmail.com>

	* ChangeLog
	* Source/NSXMLDocument.m
	* Source/NSXMLElement.m
	* Source/NSXMLNode.m: Implement copyWithZone:, correct issues
	with previous revert.

2012-01-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLDocument.m:
	* Source/NSXMLElement.m:
	Replace a few lines accidentally lost.

2012-01-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSXMLDocument.h:
	* Headers/Foundation/NSXMLNode.h:
	* Headers/Foundation/NSXMLDTD.h:
	* Headers/Foundation/NSXMLDTDNode.h:
	* Headers/Foundation/NSXMLElement.h:
	* Source/NSXMLDocument.m:
	* Source/NSXMLPrivate.h:
	* Source/NSXMLDTD.m:
	* Source/GSInternal.h:
	* Source/NSXMLNode.m:
	* Source/NSXMLDTDNode.m:
	* Source/NSXMLElement.m:
	The last revert still left lot's of ABI breakage, but reverting much
	further would lose a lot of work ... so here's an attempt to fix the
	ABI breakage by re-hiding instance variables again.

2012-01-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSMDNSNetServices.m:
	* Source/NSJSONSerialization.m:
	Cosmetic tweaks (whitespace)

2012-01-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLDocument.m:
	* Source/NSXMLNode.m:
	* Source/NSXMLElement.m:
	* Headers/Foundation/NSXMLDocument.h:
	* Headers/Foundation/NSXMLNode.h:
	* Headers/Foundation/NSXMLDTD.h:
	* Headers/Foundation/NSXMLElement.h:
	Revert latest changes to restore scheme for preventing ABI breakage